--- a/AcropolisMuseum/res/values/strings.xml
+++ b/AcropolisMuseum/res/values/strings.xml
@@ -8,22 +8,25 @@
     <string name="hello_world">Hello world!</string>
     <string name="title_activity_user_modeling">UserModeling</string>
     <string name="title_activity_nfc">NfcActivity</string>
-    <string name="questionOneText">Do you permenantely live in Greece or are you a visitor?</string>
-    <string name="questionOneAnswerOne">Greece</string>
-    <string name="questionOneAnswerTwo">Visitor</string>
-    <string name="questionTwoText">What is your profession?</string>
-    <string name="questionTwoAnswerOne">Student</string>
-    <string name="questionTwoAnswerTwo">University Student</string>
-    <string name="questionTwoAnswerThree">Worker</string>
-    <string name="questionTwoAnswerFour">Nothing of the above</string>
-    <string name="questionThreeText">How often do you visit the museum?</string>
-    <string name="questionThreeAnswerOne">Once a year</string>
-    <string name="questionThreeAnswerTwo">3&#8211;5 times a year</string>
-    <string name="questionThreeAnswerThree">More than 5 times a year</string>
+    <string name="questionOneText">Is this your first visit at the Acropolis Museum;</string>
+    <string name="questionOneAnswerOne">Yes</string>
+    <string name="questionOneAnswerTwo">I have already visited it once more</string>
+    <string name="questionOneAnswerThree">I have already visited it a lot of times</string>
+    <string name="questionTwoText">How often do you go to the museum;</string>
+    <string name="questionTwoAnswerOne">Once a year</string>
+    <string name="questionTwoAnswerTwo">3&#8211;5 times per year</string>
+    <string name="questionTwoAnswerThree">Over 5 times per year</string>
+    <string name="questionThreeText">What is your profession;</string>
+    <string name="questionThreeAnswerOne">Student</string>
+    <string name="questionThreeAnswerTwo">University student </string>
+    <string name="questionThreeAnswerThree">Employee</string>
+    <string name="questionThreeAnswerFour">Other</string>
+    <string name="questionFourText">Which  of the following is your age group;</string>
+    <string name="questionFourAnswerOne">6&#8211;12 years old</string>
+    <string name="questionFourAnswerTwo">13&#8211;25 years old </string>
+    <string name="questionFourAnswerThree">Over 25 years old</string>
     <string name="scanQR">Scan QR</string>
     <string name="scanNFC">Scan NFC</string>
-    <string name="nfcAlert">Place your device over the tag.</string>
-    <string name="nfcWait">Waiting for tag ...</string>
     <string name="title_activity_artifact_info">ArtifactInfo</string>
     <string name="infostring"><b>Acropolis Museum</b>\n\nΒογιατζή Ελένη\n\nΚοκαρίδα Νάνσυ\n\nΠλουμιδάκης Κωνσταντίνος\n\nΠρόκειται για μια εκπαιδευτική εφαρμογή σε Android η οποία δημιουργήθηκε στα πλαίσια εργασιών του Μεταπτυχιακού προγράμματος "Προηγμένα Συστήματα Πληροφορικής" του τμήματος Πληροφορικής Πανεπιστημίου Πειραιώς. Περιέχει πληροφορίες για δέκα μνημεία του μουσείου της Ακρόπολης και ένα τεστ γνώσεων.</string>
 	<string name="ScoreTitle">Results</string>
@@ -31,6 +34,8 @@
 	<string name="ScoreText2">Do you want to play again?</string>
 	<string name="ScoreYes">Yes</string>
 	<string name="ScoreNo">No</string>
+	<string name="Nfcmsg">Place your device over the tag to begin</string>
+	<string name="Nfcmsg2">Waiting for tag&#8230;</string>
     
     
     <string-array name="questions">
